@@ -3,6 +3,9 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/)
 
 ## [Unreleased]
 
+### Changed
+- `event.id` 를 참조해서 업데이트할 쿠폰번호를 질의 (#2)
+
 ## [v0.1.3] - Fri, 04 May 2018 16:27:03 +0900
 
 ### Added
